--- a/translations/tr/weapons.phrases.tf.txt
+++ b/translations/tr/weapons.phrases.tf.txt
@@ -464,6 +464,26 @@
 	{
 		"tr"	"KIYAMET YUMRUKLARI"
 	}
+	"TF_POMSON"
+	{
+		"tr"	"POMSON 6000"
+	}
+	"TF_WRENCHMOTRON"
+	{
+		"tr"	"BULDUM! BULDUM!"
+	}
+	"TF_THIRDDEGREE"
+	{
+		"tr"	"ÜÇÜNCÜ DERECE"
+	}
+	"TF_PHLOGISTINATOR"
+	{
+		"tr"	"FLOJİSTONATÖR"
+	}
+	"TF_MANMELTER"
+	{
+		"tr"	"ADAM ERİTİCİ"
+	}
 	"TF_BOOTLEGGER"
 	{
 		"tr"	"KAÇAKÇI"
@@ -476,8 +496,60 @@
 	{
 		"tr"	"JİLET GİBİ GİYİNEN"
 	}
-	"TF_T_NT"
+	"TF_BALLBUSTER"
 	{
-		"tr"	"İSİM ETİKETİ"
+		"tr"	"PAKETLEYİCİ SUİKASTÇİ"
+	}
+	"TF_SPYCICLE"
+	{
+		"tr"	"BUZ SALKIMI"
+	}
+	"TF_WEAPON_MINIGUN_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ MINIGUN"
+	}
+	"TF_MASCULINEMITTENS"
+	{
+		"tr"	"YILBAŞI YUMRUĞU"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ ROKETATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ ALEV SİLAHI"
+	}
+	"TF_WEAPON_BAT_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ SOPA"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ YAPIŞKAN BOMBA ATAR"
+	}
+	"TF_WEAPON_WRENCH_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ SIHHİLAH"
+	}
+	"TF_WEAPON_SNIPERRIFLE_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ TÜFEK"
+	}
+	"TF_WEAPON_KNIFE_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ BIÇAK"
+	}
+	"TF_WEAPON_SCATTERGUN_FESTIVE2011"
+	{
+		"tr"	"KEYİFLİ ÇİFTE"
+	}
+	"TF_BLACKROSE"
+	{
+		"tr"	"KARA GÜL"
 	}
 }
